# findSpaceGroup

./: CMakeLists.txt  README
include/: crystal.h  utilityFunctions.h
spglib/: CMakeLists.txt
src/: crystal.cpp  findSpg.cpp
